 - Weighted Categorical Matcher (much slower but takes into account more or less important bits)
 - RandomForestInMemoryImageMatcherGiny for testing purposes

### Changed
 - Move from float to double precision for algorithm settings.
 - moved TestData class to individual class to allow usage in other parts of the program.
 - renamed TestData to LabeledImage
 - make h2 dependency optional. (extract h2 into a seperate class)


## [2.1.1] 25.12.2018

### Updated
 - Bump Utility code version to 1.5.3 to support custom and exotic image color models.
 
## [2.1.0] 3.12.2018

### Changed
 - DatabaseImageMatcher now checks if an image with the id already exists before adding the image. 
 - refactor database image matcher tests to fail on sql exception rather than printing stack traces
 
## [2.0.2] 2.12.2018

### Changed
  - Bump version of compiler (3.8.0) 
  - Bum version of source and javadoc (3.0.1) maven plugin 
  - Bump version of Surefire plugin (3.0.0-M1)
  - Specify html 5 as default javadoc version.

### Added
 Database image matcher: 
  create default matcher with string constructors
  - add Images String batch operation.
  - add Images with files string batch operatio
  - getAllMatchingImages. Method to retrieve all images which matches any other image in the entire database
  - getMatchingImagesWithinDistance utility method to circumvent threshold settings.
  
### Fixed
 - unused imports removed in multiple files
 - ignore multiple deprecation warnings were applicable

## [2.0.1] 30.11.2018

### Fixed
- Update to UtilityCode 1.5.1 which excludes test resources which got added accidentally due to mvn:clean not being executed before deployment

## [2.0.0] 29.11.2018

#### Note
	- Development of version 2.0.0 was a bit all over the place. Commits are out of order and the changelog wasn't accuratly tracked.
	Starting now a more tracable documentation and commit behaviour will be enforced.

### Fixed

- Breaking change
	- rename hemming to hamming distance