@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>com.github.kilianB</groupId>
 			<artifactId>UtilityCode</artifactId>
-			<version>1.5.4</version>
+			<version>1.5.5</version>
 		</dependency>
 
 		<dependency>
