@@ -2,8 +2,8 @@ package com.github.kilianB.hashAlgorithms;
 
 import java.awt.image.BufferedImage;
 import java.math.BigInteger;
-import java.util.Objects;
 
+import com.github.kilianB.ArrayUtil;
 import com.github.kilianB.graphics.FastPixel;
 import com.github.kilianB.graphics.ImageUtil;
 
@@ -13,19 +13,10 @@ import com.github.kilianB.graphics.ImageUtil;
  * @author Kilian
  * @since 2.0.0 similar to ahash from version 1.0.0
  */
-public class AverageColorHash extends HashingAlgorithm {
+public class AverageColorHash extends AverageHash {
 
 	private static final long serialVersionUID = -5234612717498362659L;
 
-	/**
-	 * The height and width of the scaled instance used to compute the hash
-	 */
-	private int height, width;
-
-	/**
-	 * The number of pixels present in the input image
-	 */
-	private final int pixelCount;
 
 	/**
 	 * @param bitResolution The bit resolution specifies the final length of the
@@ -54,15 +45,6 @@ public class AverageColorHash extends HashingAlgorithm {
 	 */
 	public AverageColorHash(int bitResolution) {
 		super(bitResolution);
-		/*
-		 * Figure out how big our resized image has to be in order to create a hash with
-		 * approximately bit resolution bits while trying to stay as squared as possible
-		 * to not introduce bias via stretching or shrinking the image asymmetrically.
-		 */
-		computeDimension(bitResolution);
-
-		// Get the smallest key difference which is equal or bigger!
-		this.pixelCount = width * height;
 	}
 
 	@Override
@@ -72,59 +54,10 @@ public class AverageColorHash extends HashingAlgorithm {
 		int[][] grayscale = fp.getAverageGrayscale();
 
 		// Calculate the average color of the entire image
-
-		double avgPixelValue = 0;
-
-		for (int x = 0; x < width; x++) {
-			for (int y = 0; y < height; y++) {
-				avgPixelValue += ((double) grayscale[x][y] / pixelCount);
-			}
-		}
+		double avgPixelValue = ArrayUtil.average(grayscale);
 
 		// Create hash
-		for (int x = 0; x < width; x++) {
-			for (int y = 0; y < height; y++) {
-				if (grayscale[x][y] < avgPixelValue) {
-					hash = hash.shiftLeft(1);
-				} else {
-					hash = hash.shiftLeft(1).add(BigInteger.ONE);
-				}
-			}
-		}
-		return hash;
-	}
-
-	/**
-	 * Compute the dimension for the resize operation. We want to get to close to a quadratic images 
-	 * as possible to counteract scaling bias. 
-	 * 
-	 * @param bitResolution the desired resolution
-	 */
-	private void computeDimension(int bitResolution) {
-
-		// Allow for slightly non symmetry to get closer to the true bit resolution
-		int dimension = (int) Math.round(Math.sqrt(bitResolution));
-
-		// Lets allow for a +1 or -1 asymmetry and find the most fitting value
-		int normalBound = (dimension * dimension);
-		int higherBound = (dimension * (dimension + 1));
-
-		this.height = dimension;
-		this.width = dimension;
-		if (normalBound < bitResolution || (normalBound - bitResolution) > (higherBound - bitResolution)) {
-			this.width++;
-		}
-	}
-
-	@Override
-	protected int precomputeAlgoId() {
-		/*
-		 * String and int hashes stays consistent throughout different JVM invocations.
-		 * Algorithm changed between version 1.x.x and 2.x.x ensure algorithms are
-		 * flagged as incompatible. Dimension are what makes average hashes unique
-		 * therefore, even
-		 */
-		return Objects.hash(getClass().getName(), height, width);
+		return computeHash(hash,grayscale,avgPixelValue);
 	}
 
 }
